[package]
name = "konvoy"
version = "0.1.0"
authors = ["Andy Green <hello@andygrn.co.uk>"]

[dependencies]
regex = "0.2"
chrono = "0.4.0"
rust_sodium = "0.8.0"
base64 = "0.9.0"
lazy_static = "1.0"
byteorder = "1.2.1"
tar = "0.4"

[lib]
name = "konvoy_archive"
path = "src/konvoy/archive.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "corpus"
path = "src/corpus.rs"

